# ShadowDroid

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml  installer-smoke.yml  release.yml  rust-security-audit.yml
agent/: build.gradle.kts  settings.gradle.kts
agent/shadowdroid-agent/: build.gradle.kts
agent/shadowdroid-agent-okhttp/: build.gradle.kts
agent/shadowdroid-agent-okhttp/src/main/kotlin/io/github/andriyo/shadowdroid/agent/okhttp/: BodyCapture.kt  ResponseMutation.kt  ShadowDroidCaptureInterceptor.kt
agent/shadowdroid-agent-okhttp/src/test/kotlin/io/github/andriyo/shadowdroid/agent/okhttp/: ResponseMutationTest.kt
agent/shadowdroid-agent/src/main/: AndroidManifest.xml
agent/shadowdroid-agent/src/main/kotlin/io/github/andriyo/shadowdroid/agent/: AgentServer.kt  BoundedDrainBuffer.kt  BuildInfo.kt  Capture.kt  Coroutines.kt  Intercept.kt  ShadowDroidAgent.kt  ShadowDroidAgentProvider.kt
agent/shadowdroid-agent/src/test/kotlin/io/github/andriyo/shadowdroid/agent/: BoundedDrainBufferTest.kt
cli/: Cargo.toml
cli/.cargo/: audit.toml
cli/src/: cli.rs  config.rs  crashscan.rs  diagnostic.rs  dump.rs  events.rs  fusion.rs  hostenv.rs  ids.rs  main.rs  proto.rs  redaction.rs  release.rs  selector.rs  transfer.rs  update.rs
cli/src/cmd/: aar.rs  agent.rs  app_install.rs  app_state.rs  artifact.rs  authoring.rs  collect.rs  config.rs  coroutine_probes.gradle.kts  debug.rs  debugger.rs  device_profile.rs  doctor.rs  focus.rs  introspect.rs  layout.rs  log.rs  mod.rs  permissions.rs  scroll.rs  skill.rs  skill_body.md  studio.rs  studio_contract.rs  usage.rs  why.rs
cli/src/cmd/introspect/: agent_metadata.rs  guides.rs  mod.rs
cli/src/cmd/introspect/guides/: debugger.md  net.md  state.md
cli/src/device/: actions.rs  adb.rs  client.rs  installer.rs  mod.rs  portmap.rs  target.rs
cli/src/net/: ca.rs  check.rs  commands.rs  control.rs  daemon.rs  export.rs  flow.rs  mod.rs  paths.rs  proxy.rs  store.rs  trust.rs  ws.rs
cli/src/watch/: logcat.rs  loop.rs  mod.rs  stdin.rs  watcher.rs
cli/tests/: config_recovery.rs  contract.rs  init_contract.rs  skill_contract.rs
docs/: agent-debugging.md  architecture.md  checkpoint.md  delivery-plan.md  development.md  getting-started.md  net-proxy-plan.md  protocol.md  release.md
samples/: README.md
samples/shadowdroid-test-app/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
samples/shadowdroid-test-app/app/: build.gradle.kts
samples/shadowdroid-test-app/app/src/main/: AndroidManifest.xml
samples/shadowdroid-test-app/app/src/main/kotlin/io/github/andriyo/shadowdroid/sample/: AltLauncherActivity.kt  ComposeSliderFixtures.kt  CoroutineWorkload.kt  CoroutinesActivity.kt  DeepLinkActivity.kt  DetailActivity.kt  MainActivity.kt  RemoteEchoService.kt  WebSocketChatActivity.kt
samples/shadowdroid-test-app/app/src/main/res/values/: ids.xml  strings.xml  styles.xml
samples/shadowdroid-test-app/app/src/main/res/xml/: network_security_config.xml
samples/shadowdroid-test-app/chat-server/: build.gradle.kts
samples/shadowdroid-test-app/chat-server/src/main/kotlin/io/github/andriyo/shadowdroid/sample/chat/: Application.kt
samples/shadowdroid-test-app/chat-server/src/test/kotlin/io/github/andriyo/shadowdroid/sample/chat/: ApplicationTest.kt
scripts/: install.ps1  install.sh  release.sh  update-package-managers.py
server/: build.gradle.kts  gradle.properties  settings.gradle.kts
server/app/: build.gradle.kts
server/app/src/androidTest/java/io/github/andriyo/shadowdroid/: BuildInfo.kt  HttpServer.kt  ShadowDroidServerTest.kt
server/app/src/androidTest/java/io/github/andriyo/shadowdroid/dump/: TreeWalker.kt
server/app/src/androidTest/java/io/github/andriyo/shadowdroid/proto/: Proto.kt
server/app/src/androidTest/java/io/github/andriyo/shadowdroid/routes/: AppRoutes.kt  FileRoutes.kt  FileRoutesAtomicWriteTest.kt  GestureRoutes.kt  Helpers.kt  IdentifierValidationTest.kt  KeyTextRoutes.kt  ScreenIdentityTest.kt  ScreenRoutes.kt  SelectorRoutes.kt  StateRoutes.kt  Stubs.kt  SystemRoutes.kt  ToastRoutes.kt
server/app/src/main/: AndroidManifest.xml
server/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
shadowdroid-plugin/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
shadowdroid-plugin/src/main/java/io/github/andriyo/shadowdroid/studio/: AndroidAttachBridge.java  BreakpointBridge.java  BridgeProtocol.java  DebuggerValues.java  LayoutInspectorBridge.java  Response.java  ShadowDroidDebuggerBridge.java  SourceResolver.java  StudioThreading.java  ThrowingSupplier.java
shadowdroid-plugin/src/main/kotlin/io/github/andriyo/shadowdroid/studio/: AndroidAttachBridge.kt  BreakpointBridge.kt  BridgeContract.kt  BridgeProtocol.kt  DebuggerValues.kt  KotlinBridgeSupport.kt  LayoutInspectorBridge.kt  Response.kt  SelectionPolicy.kt  SessionWatchCache.kt  ShadowDroidDebuggerBridge.kt  SourceResolver.kt  StudioThreading.kt  ThrowingSupplier.kt
shadowdroid-plugin/src/test/kotlin/io/github/andriyo/shadowdroid/studio/: SelectionPolicyTest.kt  SessionWatchCacheTest.kt
