[package]
name = "shadowdroid"
version = "0.13.0"
edition = "2024"
# Intentionally tracks the standard-library APIs used by the CLI (not merely
# dependency metadata). CI compiles this floor separately from the pinned
# release toolchain.
rust-version = "1.91"
resolver = "3"
description = "Drive Android apps from the command line — streaming JSON events, structured crashes, declarative popup watchers"
authors = ["Andrii <andriy@...>"]
license = "Apache-2.0"
repository = "https://github.com/andriyo/ShadowDroid"
readme = "../README.md"
keywords = ["android", "uiautomator", "testing", "automation", "agent"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "shadowdroid"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Versions verified against crates.io as of the latest stable channel.
# Cargo's caret requirements allow semver-compatible updates; Cargo.lock plus
# `--locked` pins the exact graph used by CI and release builds.

# ── CLI ──────────────────────────────────────────────────────────────────
clap = { version = "4.6", features = ["derive", "env"] }

# ── Async runtime + HTTP client ─────────────────────────────────────────
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "fs", "signal", "sync", "time", "net"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# ── Serialization ───────────────────────────────────────────────────────
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ── ADB protocol (no shell-out to adb binary) ───────────────────────────
# 3.x is a breaking change from 2.x; touch points are in device/adb.rs.
# Disable the default framebuffer feature because ShadowDroid never requests it.
adb_client = { version = "3.2", default-features = false }

# ── Logcat tail + crash parsing ─────────────────────────────────────────
regex = "1.12"

# ── Utility ─────────────────────────────────────────────────────────────
anyhow = "1.0.103"
thiserror = "2.0"         # derives Display + Error for ServerError / AmbiguousMatch
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0"       # NB: 6.x renames ProjectDirs::from() variants — sites in installer.rs
blake3 = "1.8"            # screen hashing
sha2 = "0.11"             # release APK checksum verification
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "rt"] } # streamed I/O plus tracked/cancellable proxy tasks
semver = "1.0"            # compare release versions, including pre-release precedence
urlencoding = "2.1"   # used for ?package= query strings
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
tempfile = "3.27"     # same-directory temporary files for atomic config replacement
image = { version = "0.25", default-features = false, features = ["png"] } # explicit accessibility-bounds screenshot redaction
# once_cell removed: std::sync::OnceLock (stable since 1.70) covers our use case.
# Bring it back if we need the &'static initialisation guarantee for ergonomics.

# ── MITM proxy (`net` namespace) ────────────────────────────────────────
# All already present transitively (verified in Cargo.lock); promoting to
# direct deps adds no build cost. aws-lc-rs is the active rustls provider.
hyper = { version = "1.9", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http = "1.4"
http-body-util = "0.1"
bytes = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-platform-verifier = "0.7" # make --verify-upstream apply to WSS as well as HTTP(S)
# AWS-LC gives rcgen RSA key generation; generated roots use RSA-2048 for
# compatibility with older/non-GMS Android certificate pickers.
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
x509-parser = "0.18"     # inspect a user-provided CA cert (SPKI match, CA flag, validity) on `net ca import`; already in lock via rcgen
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] } # keep zip and proxy decompression on the same backend
brotli = "8"             # decompress captured `br` response bodies (pure Rust; keeps the single binary)
ruzstd = "0.8"           # decompress captured `zstd` response bodies (pure Rust decoder, no libzstd C dep)

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
